# Granulizor

./: Cargo.toml  README.md
assets/: midi.mid
src/: lib.rs  pitcher.rs  wav_parser.rs
